wip: mermaid styling

--- a/src/pages/mermaid.mdx
+++ b/src/pages/mermaid.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mermaid Tests
-description: "Test page for mermaid diagrams"
+description: 'Test page for mermaid diagrams'
 slug: /mermaid
 ---
 
@@ -80,26 +80,30 @@ gantt
 
 ```mermaid
 classDiagram
-    Animal <|-- Duck
-    Animal <|-- Fish
-    Animal <|-- Zebra
-    Animal : +int age
+  accTitle: Demo Class Diagram
+  accDescr: This class diagram show the abstract Animal class, and 3 classes that inherit from it: Duck, Fish, and Zebra.
 
-    Animal : +String getSpecies()
-    Animal : +void eat()
-    class Duck{
-        +String beakColor
-        +swim()
-        +quack()
-    }
-    class Fish{
-        -int sizeInFeet
-        -canEat()
-    }
-    class Zebra{
-        +bool is_wild
-        +run()
-    }
+  Animal <|-- Duck
+  Animal <|-- Fish
+  Animal <|-- Zebra
+  Animal : +int age
+  Animal : +String gender
+  Animal: +isMammal()
+  Animal: +mate()
+
+  class Duck{
+    +String beakColor
+    +swim()
+    +quack()
+  }
+  class Fish{
+    -int sizeInFeet
+    -canEat()
+  }
+  class Zebra{
+    +bool is_wild
+    +run()
+  }
 ```
 
 ## State Diagram
